--- a/styles/style.css
+++ b/styles/style.css
@@ -118,8 +118,8 @@ footer {
     bottom: 0;
     display: block;
     width: 100%;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     text-align: center;
     font-size: 14px;
     padding-top: 2px;
@@ -140,6 +140,23 @@ h2 {
     text-align: center;
 }
 
+main.home h1 {
+    color: purple;
+}
+main.home h2 {
+    color: purple;
+}
+
+main.images h1 {
+    color: fuchsia;
+}
+
+main.about h1 {
+    color: grey;
+}
+main.about h2{
+    color: grey;
+}
 
 /* --- Components --- */
 
@@ -273,6 +290,13 @@ h2 {
     .carousel-container .carousel .carousel-inner .carousel-item img {
         height: 280px;
     }
+
+    main.about h1 {
+        font-size: 35px;
+    }
+    main.about h2{
+        font-size: 25px;
+    }
 }
 
 @media all and (max-width: 420px)  {
@@ -282,6 +306,13 @@ h2 {
     .carousel-container .carousel .carousel-inner .carousel-item img {
         height: 220px;
     }
+
+    main.about h1 {
+        font-size: 25px;
+    }
+    main.about h2{
+        font-size: 15px;
+    }
 }
 
 @media all and (max-width: 320px)  {
@@ -290,5 +321,12 @@ h2 {
     .carousel-container .carousel .carousel-inner,
     .carousel-container .carousel .carousel-inner .carousel-item img {
         height: 180px;
+    }
+
+    main.about h1 {
+        font-size: 15px;
+    }
+    main.about h2{
+        font-size: 15px;
     }
 }
